fix(objectedit): changed dialog to scroll (before the save button was not visible and not reachable)
affects: @ha4us/ng-gui

--- a/projects/gui/src/app/ha4us/components/object-edit-dialog/object-edit-dialog.component.scss
+++ b/projects/gui/src/app/ha4us/components/object-edit-dialog/object-edit-dialog.component.scss
@@ -1,3 +1,14 @@
 :host {
-  overflow: scroll
+  max-height: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  position: relative;
+
+}
+
+ha4us-object-edit {
+  overflow: auto
 }
