--- a/projects/gui/src/app/ha4us/components/object-edit/object-edit.component.scss
+++ b/projects/gui/src/app/ha4us/components/object-edit/object-edit.component.scss
@@ -1,8 +1,23 @@
+:host {
+  max-height: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  position: relative;
+
+}
+
 .ellipsis {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-width: 100%;
-    width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 100%;
+  width: 100%;
+}
+
+.details {
+  overflow: scroll
 }
 
 /*.ellipsis {
@@ -25,8 +40,9 @@
 */
 /*Show on hover*/
 #fileName:hover {
-    width: auto;
+  width: auto;
 }
+
 #fileName:hover:after {
-    display: none;
+  display: none;
 }
